# -

./: .env  README.md  index.html  package-lock.json  package.json  vite.config.ts
.trae/documents/: PRD超级马里奥游戏.md  arch.md  prd.md  技术架构-超级马里奥游戏.md
backend/: server.js
backend_python/: .env  README.md  document_parser.py  main.py  rag_chain.py  requirements.txt
backend_python/BASE_DIR / "vector_store"/: chroma.sqlite3
backend_python/uploads/: httpSDK部署包使用说明.md  test.txt  深视传感器.docx
backend_python/vector_store/: chroma.sqlite3  documents.json
ros2_ws/: compile_and_run.sh  hello_five_meat
ros2_ws/src/hello_five_meat/: CMakeLists.txt  package.xml
ros2_ws/src/hello_five_meat/src/: hello_node.cpp  simple_node.cpp
src/: App.tsx  index.css  store.ts
src/components/: Amap.tsx  Camera.tsx  ChatInterface.tsx  KnowledgeBase.tsx  PolaroidPhoto.tsx
src/hooks/: useDogWalkStore.ts  useQuizStore.ts
src/pages/: DogWalkList.tsx  Home.tsx  PublishDogWalk.tsx  Quiz.tsx  Result.tsx
src/store/: usePhotoStore.ts
src/types/: dogWalk.ts
src/utils/: houses.ts  questions.ts  types.ts
